# crud-flask

./: .flaskenv  Makefile  README.md  pyproject.toml  requirements.txt  settings.toml
app/: __init__.py  data_validate.py  exceptions.py  model.py  models.py  responses.py  routes.py  schemas.py  settings.py  wsgi.py
app/api/: __init__.py  create.py  delete.py  index.py  read.py  update.py
