[tool.poetry]
name = "crud-flask"
version = "0.0.2"
description = "Simple flask application of a CRUD"
authors = ["igor-taconi <igortaconi1@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"
Flask = "1.1.2"
SQLAlchemy = "1.3.23"
python-dotenv = "0.15.0"
gunicorn = "20.0.4"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
isort = "^5.8.0"
flake8 = "^3.9.0"
ipdb = "^0.13.7"
pytest = "^6.2.3"
pytest-flask = "^1.2.0"
pytest-cov = "^2.11.1"
requests = "^2.25.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
